# Alginate

./: .gitignore  Alginate.cpp  Alginate.h  Alginate.hpp  Alginate_old.cpp  Alginate_old.hpp  BigNum.cpp  BigNum.hpp  CMakeLists.txt  README.md  cachegrind.out.14260  main.cpp
include/: Alginate.hpp
include_old/: Alginate.hpp  Alginate_old.hpp
src/: Alginate.cpp  Alginate_old.cpp  add.cpp  alg.cpp  bitwise.cpp  cmp.cpp  ctor.c  ctor.cpp  div.cpp  exp.cpp  ext_gcd.cpp  input.cpp  main.cpp  miller_rabin.cpp  misc.c  misc.cpp  mod.cpp  mont_exp.cpp  mul.cpp  operators.cpp  output.cpp  print.cpp  sub.cpp
src_old/: main.cpp
